--- a/classroom-frontend/package.json
+++ b/classroom-frontend/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1"
   },
+  "homepage": "https://medipe2.psu.ac.th/rrms/",
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.16",
